# Fintech_Agentic_Platform

./: .env.example  AGENT.md  AI_AGENTS.md  API_GUIDELINES.md  ARCHITECTURE.md  CODING_STANDARDS.md  DATABSE_DESIGN.md  LANGGRAPH_DESIGN.md  PROJECT_ROADMAP.md  PROJECT_STRUCTURE.md  RAG_DESIGN.md  README.md  SECURITY.md  TASK.md  TECH_STACK.md  TESTING_STRATEGY.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
app/: __init__.py  main.py
app/agents/: __init__.py
app/ai/: __init__.py
app/api/: __init__.py  auth.py  health.py  router.py  users.py
app/config/: __init__.py  logging.py  settings.py
app/core/: __init__.py  dependencies.py  security.py
app/database/: __init__.py  base.py  dependencies.py  engine.py  session.py
app/exceptions/: __init__.py  handlers.py
app/memory/: __init__.py
app/middleware/: __init__.py
app/models/: __init__.py  user.py
app/prompts/: __init__.py
app/rag/: __init__.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: __init__.py  auth_service.py  user_service.py
app/utils/: __init__.py
app/workflows/: __init__.py
scripts/: __init__.py  verify_app.py
tests/: __init__.py  conftest.py
tests/api/: test_auth.py
tests/unit/: test_auth_service.py
